--- a/code/dev/parts/keys/edit.html
+++ b/code/dev/parts/keys/edit.html
@@ -96,7 +96,7 @@
             <label for="domains"
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
-                   popover="Managed Domains">Managed Domains</label>
+                   uib-popover="Managed Domains">Managed Domains</label>
 
             <div class="col-sm-10">
               <ui-select id="domains"
@@ -117,7 +117,7 @@
             <label popover-append-to-body="{{true}}"
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
-                   popover="Permissions">Permissions</label>
+                   uib-popover="Permissions">Permissions</label>
 
             <div class="col-sm-10">
                 <div class="col-sm-10">
