--- a/code/dev/parts/signup/resend.html
+++ b/code/dev/parts/signup/resend.html
@@ -26,7 +26,7 @@
               </p>
               <form class="form-horizontal" ng-submit="resendToken(model)">
                 <div class="form-group">
-                  <label for="email" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="We will send a new verification token to this email">Email</label>
+                  <label for="email" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="We will send a new verification token to this email">Email</label>
                   <div class="col-sm-10">
                     <input type="email" autofocus class="form-control" id="email" placeholder="Email" ng-model="model.email" ng-disabled="_loading">
                   </div>
