--- a/code/parts/logshippers/edit.html
+++ b/code/parts/logshippers/edit.html
@@ -22,13 +22,13 @@
       <div class="panel-body">
         <form class="form-horizontal" name="editForm">
           <div class="form-group" ng-class="{ 'has-error': editForm.job_name.$invalid && editForm.job_name.$dirty }">
-            <label for="job_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Enter here a Job Name">Job Name *</label>
+            <label for="job_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter here a Job Name">Job Name *</label>
             <div class="col-sm-10">
               <input type="text" autofocus class="form-control" ng-disabled="_loading" ng-model="model.job_name" name="job_name" id="job_name" placeholder="Job Name" required>
             </div>
           </div>
           <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()" ng-class="{ 'has-error': editForm.accountId.$invalid && editForm.accountId.$dirty }">
-            <label for="account_id" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Select account name the job should be associated with">Account *</label>
+            <label for="account_id" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select account name the job should be associated with">Account *</label>
             <div class="col-sm-10">
               <!--    <select class="form-control" ng-disabled="_loading" ng-model="model.account_id" id="account_id" ng-options="obj.id as obj.companyName for obj in companies" name="accountId" required>
                 <option value="">--- Select Account ---</option>
@@ -43,7 +43,7 @@
           </div>
           <!-- Set Current Mode -->
           <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()">
-            <label for="company" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Select current mode">Set Current Mode *</label>
+            <label for="company" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select current mode">Set Current Mode *</label>
             <div class="col-sm-10">
               <select class="form-control" id="company" ng-model="model.operational_mode" ng-disabled="_loading" ng-options="key as value for (key, value) in operationalStates"></select>
             </div>
@@ -51,7 +51,7 @@
           <!-- //Set Current Mode -->
           <!-- Source Type-->
           <div class="form-group">
-            <label for="domain" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Select Source Type">Source Type *</label>
+            <label for="domain" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select Source Type">Source Type *</label>
             <div class="col-sm-10">
               <select class="form-control" id="domain" ng-model="model.source_type" ng-disabled="_loading" ng-options="key as value for (key,value) in sourceTypes" required ng-change="onChangeSourceType(model.source_type)"></select>
             </div>
@@ -59,7 +59,7 @@
           <!-- //Source Type-->
           <!-- Source Name  -  depending on value of “Source Type” item - a drop-down searchable list of domains or mobile apps belonging to the account -->
           <div class="form-group" ng-class="{ 'has-error': editForm.sourceId.$invalid && !editForm.sourceId.$dirty }">
-            <label for="domain" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Select source name">
+            <label for="domain" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select source name">
               Source <span ng-show="model.source_type=='domain'">Domain</span>
               <span ng-show="model.source_type=='app'">Application</span> *
             </label>
@@ -87,38 +87,38 @@
             </div>
             <div class="panel-body">
               <div class="form-group">
-                <label for="domain" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Select Destination ">Destination *</label>
+                <label for="domain" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select Destination ">Destination *</label>
                 <div class="col-sm-10">
                   <select class="form-control" id="domain" ng-model="model.destination_type" ng-disabled="_loading" ng-options="key as value for (key,value) in destinationTypes" required></select>
                 </div>
               </div>
               <!-- Destination Host -->
               <div class="form-group">
-                <label for="Host" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Host">Host</label>
+                <label for="Host" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Host">Host</label>
                 <div class="col-sm-10">
                   <input type="text" class="form-control" id="firstname" placeholder="Host" ng-model="model.destination_host" ng-disabled="_loading">
                 </div>
               </div>
               <div class="form-group">
-                <label for="destination_port" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Port">Port</label>
+                <label for="destination_port" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Port">Port</label>
                 <div class="col-sm-10">
                   <input type="text" class="form-control" id="destination_port" placeholder="Port" ng-model="model.destination_port" ng-disabled="_loading">
                 </div>
               </div>
               <div class="form-group">
-                <label for="destination_key" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Secret Key">Secret Key</label>
+                <label for="destination_key" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Secret Key">Secret Key</label>
                 <div class="col-sm-10">
                   <input type="text" class="form-control" id="destination_key" placeholder="Secret Key" ng-model="model.destination_key" ng-disabled="_loading">
                 </div>
               </div>
               <div class="form-group">
-                <label for="destination_username" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Username">Username</label>
+                <label for="destination_username" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Username">Username</label>
                 <div class="col-sm-10">
                   <input type="text" class="form-control" id="destination_username" placeholder="Username" ng-model="model.destination_username" ng-disabled="_loading">
                 </div>
               </div>
               <div class="form-group">
-                <label for="destination_password" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Password ">Password </label>
+                <label for="destination_password" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Password ">Password </label>
                 <div class="col-sm-10">
                   <input type="text" class="form-control" id="destination_password" placeholder="Password" ng-model="model.destination_password" ng-disabled="_loading">
                 </div>
@@ -128,14 +128,14 @@
           <!-- // Destination-->
           <hr>
           <div class="form-group">
-            <label for="notification_email" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Email For Problem Notifications">Email For Problem Notifications</label>
+            <label for="notification_email" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Email For Problem Notifications">Email For Problem Notifications</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="notification_email" placeholder="Username" ng-model="model.notification_email" ng-disabled="_loading">
             </div>
           </div>
           <div class="form-group" ng-class="{ 'has-error': editForm.comment.$invalid &&
                                       editForm.comment.$dirty }">
-            <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Comment">Comment</label>
+            <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment">Comment</label>
             <div class="col-sm-6">
               <textarea id="comment" placeholder="Comment (max 300 symbol)" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
               </textarea>
