--- a/code/parts/reports/filters/top-objects-filter.html
+++ b/code/parts/reports/filters/top-objects-filter.html
@@ -38,7 +38,7 @@
         <select class="form-control fixed"
                 style="width: 170px"
                 popover-trigger="mouseenter"
-                popover="Number of top records to report"
+                uib-popover="Number of top records to report"
                 ng-model="ngFilters.count">
           <option value="5">Top 5 Records</option>
           <option value="10">Top 10 Records</option>
